--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ numpy>=2.1,<2.3
 scikit-learn>=1.4,<1.6
 openai>=1.30,<2.0
 pdfminer.six==20250506
-streamlit-authenticator>=0.3.3,<0.4.0
-bcrypt>=4.1.2,<5.0
+streamlit-authenticator
+bcrypt
